--- a/module_1/M1_NB1_PythonIntro.ipynb
+++ b/module_1/M1_NB1_PythonIntro.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "### Your completion of the notebook exercises will be graded based on your ability to do the following:\n",
     "\n",
-    "> **Understand**: Do your pseudo-code and/or comments show evidence that you recall and understand technical concepts?\n",
+    "> **Understand**: Do your pseudo-code and comments show evidence that you recall and understand technical concepts?\n",
     "\n",
     "> **Apply**: Are you able to execute code (using the supplied examples) that performs the required functionality on supplied or generated data sets?"
    ]
@@ -131,7 +131,7 @@
     "\n",
     "**Indentation**\n",
     "> Code blocks are demarcated by their indentation. In particular, **control structures** end with a colon <font color='brown'> : </font> at the decision point. Code blocks indicating action that must be taken when the decision evaluates to \"True\" are demarcated by indentation. \n",
-    ">> Note:  **Spaces and tabs don't mix**\n",
+    ">> Note:  **Spaces and tabs do not mix**\n",
     "Because whitespace is significant, remember that spaces and tabs don't mix, so use only one or the other when indenting your programs. A common error is to conflate them. While they may look the same during editing, the interpreter will read them differently, and it will result in either an error or unexpected behavior. Most decent text editors can be configured to let the tab key emit spaces instead."
    ]
   },
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In summary, this section described what a variable is, how you can store information in it, and then retrieve that information at a later stage. The variable can have a name, and this name is usually informed by the kind of content you’ll be storing in the variable. So, if you’re storing your name in the variable, you’d name the variable “yourName”. You wouldn’t **have** to give it that name, you could name the variable “WowImProgramming”, but that wouldn’t make much sense considering you are trying to store a person’s name. Finally, variables have types, and these types are used to help us organize what can and cannot be stored in the variable. \n",
+    "In summary, this section described what a variable is, how you can store information in it, and then retrieve that information at a later stage. The variable can have a name, and this name is usually informed by the kind of content you’ll be storing in the variable. So, if you’re storing your name in the variable, you would name the variable “yourName”. You would not **have** to give it that name, you could name the variable “WowImProgramming”, but that wouldn’t make much sense considering you are trying to store a person’s name. Finally, variables have types, and these types are used to help us organize what can and cannot be stored in the variable. \n",
     "\n",
     "> **Hint**: Having a type will help to open up what kinds of things we can do with the information inside the variable. \n",
     "\n",
@@ -209,7 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "# Alternatively, we can also use single quotes to specify the value.\n",
+    "# Alternatively, you can also use single quotes to specify the value.\n",
     "'Bob'"
    ]
   },
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use the function “type()” and include the name of the value in between the parentheses to find out what type the value is. (Functions in Python are explained in more detail later in this notebook.)"
+    "You can use the function “``type()``” and include the name of the value in between the parentheses to find out what type the value is. (Functions in Python are explained in more detail later in this notebook.)"
    ]
   },
   {
@@ -783,7 +783,7 @@
     "\n",
     "### Instructions\n",
     "1. Set your first and last names as separate variables (\"firstname\" and \"lastname\", respectively).\n",
-    "2. Print your first name and last name using the str.format() form discussed above. Include a space between your first and last name in the print output."
+    "2. Print your first name and last name using the \"``str.format()``\" form discussed above. Include a whitespace character between your first and last name in the print output."
    ]
   },
   {
@@ -858,7 +858,7 @@
    "metadata": {},
    "source": [
     "#### Selecting an element in a list\n",
-    "Remember that Python's index starts at zero. You can use a negative index to select the last element in the list."
+    "Remember that Python uses zero indexing, that is, the index starts at zero. You can use a negative index to select the last element in the list."
    ]
   },
   {
@@ -1042,7 +1042,7 @@
    "outputs": [],
    "source": [
     "# Tuples cannot be changed and will fail with an error if you try to change an element.\n",
-    "tup[3] = 'new'"
+    "#tup[3] = 'new'"
    ]
   },
   {
@@ -1120,7 +1120,7 @@
    },
    "outputs": [],
    "source": [
-    "# You can specify the list manually or use a variable containg the list as input.\n",
+    "# You can specify the list manually or use a variable containing the list as input.\n",
     "# The syntax for manual input is: `for item in [1, 2, 3]:`\n",
     "\n",
     "for item in myrange:\n",
@@ -1190,8 +1190,8 @@
    },
    "outputs": [],
    "source": [
-    "# Function 'firstfunction' with argument 'x'.\n",
-    "def firstfunction(x):\n",
+    "# Function 'myfirstfunction' with argument 'x'.\n",
+    "def myfirstfunction(x):\n",
     "    y = x * 6\n",
     "    return y\n"
    ]
@@ -1200,7 +1200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now call the function as in the next example."
+    "You can now call the function as in the next example."
    ]
   },
   {
@@ -1212,7 +1212,7 @@
    "outputs": [],
    "source": [
     "# Call your function.   \n",
-    "z = firstfunction(6)\n",
+    "z = myfirstfunction(6)\n",
     "print(z)"
    ]
   },
@@ -1231,6 +1231,7 @@
    },
    "outputs": [],
    "source": [
+    "import random\n",
     "random.random()"
    ]
   },
@@ -1242,27 +1243,27 @@
    },
    "outputs": [],
    "source": [
-    "def cointoss(total_number_of_tosses):\n",
+    "def coinflip(total_number_of_flips):\n",
     "    '''\n",
-    "    function 'coinflip' with argument 'total_number_of_tosses' for the number of repetitions \n",
+    "    function 'coinflip' with argument 'total_number_of_flips' for the number of repetitions \n",
     "    that returns the number of 'tail' occurrences\n",
     "    '''\n",
     "    # Set all starting variables to 0.\n",
     "    heads = 0\n",
     "    tails = 0\n",
-    "    current_number_of_tosses = 0\n",
+    "    current_number_of_flips = 0\n",
     "    # Start a loop that executes statements while the conditional specified results in 'True'.\n",
-    "    while current_number_of_tosses < total_number_of_tosses:\n",
+    "    while current_number_of_flips < total_number_of_flips:\n",
     "        # Generate a random number smaller than 2.\n",
-    "        current_toss = random.randrange(0,2)\n",
+    "        current_flip = random.randrange(0,2)\n",
     "        # Increment heads by 1 if the generated number is 0.\n",
-    "        if current_toss == 0:\n",
+    "        if current_flip == 0:\n",
     "            heads = heads + 1\n",
     "        # Increment tails by 1 if the generated number is larger than 0.\n",
-    "        if current_toss == 1:\n",
+    "        if current_flip == 1:\n",
     "            tails = tails + 1\n",
     "        # Increment the flip variable by 1.\n",
-    "        current_number_of_tosses += 1\n",
+    "        current_number_of_flips += 1\n",
     "    return [heads, tails]"
    ]
   },
@@ -1272,7 +1273,7 @@
    "source": [
     "In the above function definition, there is a “docstring” to describe what the function does in lieu of the comment that has been used. This is considered best practice when defining functions in Python. The docstring is included just after the ```def``` statement, and is included between a pair of three single or double quotation marks.\n",
     "\n",
-    "In the \"```cointoss```\" function, you are simulating the number of times an unbiased coin returns heads or tails on being tossed. To track these values, initialize the counts to zero for both the heads and tails variables. Moreover, it is also important to include a variable flip that tracks the number of tosses in the simulation. The simulation ends when the number of tosses required, as specified in the function argument, is reached. To simulate the actual coin flip or toss event, call the function “```randrange```” from the Python ```random``` module, which accepts a minimum of two parameters: the start of the range from which you want to simulate, and the end of the range (stop) from which point and above you do not care about. Let's see what this randrange function does by calling it for the given parameters."
+    "In the \"```coinflip```\" function, you are simulating the number of times an unbiased coin returns heads or tails on being flipped. To track these values, initialize the counts to zero for both the heads and tails variables. Moreover, it is also important to include a variable flip that tracks the number of flips in the simulation. The simulation ends when the number of flips required, as specified in the function argument, is reached. To simulate the actual coin flip or flip event, call the function “```randrange```” from the Python \"```random```\" module, which accepts a minimum of two parameters: the start of the range from which you want to simulate, and the end of the range (stop) from which point and above you do not care about. You can see what this \"``randrange``\" function does by calling it for the given parameters."
    ]
   },
   {
@@ -1294,11 +1295,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Every time you call ```randrange```, either a 0 or 1 is returned with equal probability. Hence, it is a good approximation for tossing an unbiased coin in our example. This example also does something that is slightly complex to describe. Before calling “enter loop”, set your random seed generator to the current time. This ensures you do not always get the same sequence, as random number generation inside the program is not truly random, but follows a deterministic algorithm. You need to use a different random seed for a better approximation for random number generation.\n",
+    "Every time you call \"```randrange```\", either a 0 or 1 is returned with equal probability. Hence, it is a good approximation tp flipping an unbiased coin in our example. This example also does something that is slightly complex to describe. Before calling “enter loop”, set your random seed generator to the current time. This ensures you do not always get the same sequence, as random number generation inside the program is not truly random, but follows a deterministic algorithm. \n",
+    "> **Note:**\n",
+    ">\n",
+    "> Later modules will exploit this determinism by setting the random seed for reproducibility of expected outcomes.\n",
     "\n",
-    "Going back to the coin flip function, when you toss the coin, a 0 or 1 is obtained as a value. You check whether this is 0, and if so, you increment your count of heads by 1. If it is a 1, you increment the count of tails by 1. Recall that these two states are mutually exclusive, and only one can occur on each toss. After these checks, you also increase your count of tosses tracked in “```current_number_of_tosses```”. You repeat this until you have reached the “```total_number_of_tosses```”.\n",
+    "Going back to the coin flip function, when you flip the coin, a 0 or 1 is obtained as a value. You check whether this is 0, and if so, you increment your count of heads by 1. If it is a 1, you increment the count of tails by 1. Recall that these two states are mutually exclusive, and only one can occur on each flip. After these checks, you also increase your count of flips tracked in “```current_number_of_flips```”. You repeat this until you have reached the “```total_number_of_flips```”.\n",
     "\n",
-    "Finally, the function returns the counts of both heads and tails obtained from your simulation as an array, where the first entry is number of heads. Let’s invoke the function for 100 tosses."
+    "Finally, the function returns the counts of both heads and tails obtained from your simulation as an array, where the first entry is number of heads. Let’s invoke the function for 100 flips."
    ]
   },
   {
@@ -1310,13 +1314,13 @@
    "outputs": [],
    "source": [
     "# Set the number of repetitions.\n",
-    "num_tosses = 100\n",
+    "num_flips = 100\n",
     "\n",
     "# Call the function and set the output to the variable 'tails'.\n",
-    "cointoss_results = cointoss(num_tosses)\n",
+    "coinflip_results = coinflip(num_flips)\n",
     "\n",
     "# Output the values returned.\n",
-    "print(cointoss_results)"
+    "print(coinflip_results)"
    ]
   },
   {
@@ -1334,9 +1338,9 @@
    },
    "outputs": [],
    "source": [
-    "num_tosses = 10000\n",
-    "cointoss_results = cointoss(num_tosses)\n",
-    "print('Heads returned: {:.0f}%'.format(100*float(cointoss_results[0])/sum(cointoss_results)))"
+    "num_flips = 10000\n",
+    "coinflip_results = coinflip(num_flips)\n",
+    "print('Heads returned: {:.0f}%'.format(100*float(coinflip_results[0])/sum(coinflip_results)))"
    ]
   },
   {
@@ -1489,7 +1493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1.2 Matplotlib - Demo with subplots\n",
+    "### 3.1.2 Subplots\n",
     "\"Subplots\" is another useful feature where you can display multiple plots. This is typically used to visually compare data sets."
    ]
   },
@@ -1531,8 +1535,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1.3 Matplotlib - Histogram (with a few features)\n",
-    "Here is another example that may be utilized in the future. The example demonstrates syntax, and provides ideas of what is possible."
+    "### 3.1.3 Histogram \n",
+    "Here is another example of a plot that will be utilized in future modules. The example demonstrates syntax, and provides ideas of what is possible."
    ]
   },
   {
@@ -1586,9 +1590,9 @@
    "source": [
     "### 3.1.4 Visualizing coin flip distribution\n",
     "\n",
-    "This is a continuation of your coin flip simulation from the previous section. Although you already have a fairly accurate idea of whether or not the coin is biased, in statistics, the typical approach requires sampling from the underlying distribution multiple times, and then plotting the sampling distribution. To this end, we require a handle on the actual value for the probability of landing heads between 0 and 1 (probability of landing tails will then be 1 minus that value), which can be generated using the ```random()``` method from the **random** module, that is the call ```random.random()```. In the case of a fair coin, we can designate as heads anytime the value generated is below 0.5, otherwise it is assigned as tails. An unfair coin can be simulated by adjusting this threshold; the closer the value is to 0 (and below 0.5) the less likely the chance of getting heads in multiple trials. Technically, this is a fairly complex statistical procedure and is captured here for illustrative purposes. \n",
+    "This is a continuation of your coin flip simulation from the previous section. Although you already have a fairly accurate idea of whether or not the coin is biased, in statistics, the typical approach requires sampling from the underlying distribution multiple times, and then plotting the sampling distribution. To this end, a handle is required on the actual value for the probability of landing heads between 0 and 1 (probability of landing tails will then be 1 minus that value), which can be generated using the \"```random()```\" method from the **random** module, that is the call \"```random.random()```\". In the case of a fair coin, designate as heads anytime the value generated is below 0.5, otherwise it is assigned as tails. An unfair coin can be simulated by adjusting this threshold; the closer the value is to 0 (and below 0.5) the less likely the chance of getting heads in multiple trials. This is an involved complex statistical procedure, and is captured here for illustrative purposes. \n",
     "\n",
-    "In the next code cell, we simulate tossing a fair coin by specifying the threshold as 0.5. We toss the coin 10 times and note the number of times it falls heads in those trials. This is repeated 1000 times, from which we can plot the sampling distribution of the underlying distribution (known as the binomial distribution)."
+    "In the next code cell, we simulate flipping a fair coin by specifying the threshold as 0.5. You will flip the coin 10 times and note the number of times it falls heads in those trials. This is repeated 1000 times, from which a plot of the sampling distribution of the underlying distribution (known as the binomial distribution) is generated."
    ]
   },
   {
@@ -1660,16 +1664,16 @@
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
-    "<b>Exercise 3 start: Coin flip distribution.</b>\n",
+    "<b>Exercise 3 Start: Coin flip distribution.</b>\n",
     "</div>\n",
     "\n",
     "### Instructions\n",
     "\n",
-    "> Using the \"coinflip\" example above, simulate the distribution one would get for a biased coin that has an *80%* probability of landing tails for *1000* simulations, where the coin is tossed *20* times at each simulation. Plot the histogram using the Matplotlib.\n",
+    "> Using the \"coinflip\" example above, simulate the distribution one would get for a biased coin that has an *80%* probability of landing tails for *1000* simulations, where the coin is flipped *20* times at each simulation. Plot the histogram using the Matplotlib.\n",
     "\n",
     "> **Hints**:\n",
     "\n",
-    "> - Change \"ntrials\", size, and threshold in the coin simulation code from above.\n",
+    "> - Change \"ntrials\", \"size\", and \"threshold\" in the coin simulation code from above.\n",
     "> - The probability of getting tails is given. You need to compute the probability of getting heads from this value, which you will then use as the threshold value."
    ]
   },
