--- a/module_1/M1_NB2_DataAnalysisBasics.ipynb
+++ b/module_1/M1_NB2_DataAnalysisBasics.ipynb
@@ -22,11 +22,11 @@
    "source": [
     "### Your completion of the notebook exercises will be graded based on your ability to do the following:\n",
     "\n",
-    "> **Understand**: Do your pseudo-code and/or comments show evidence that you recall and understand technical concepts?\n",
+    "> **Understand**: Do your pseudo-code and comments show evidence that you recall and understand technical concepts?\n",
     "\n",
     "> **Apply**: Are you able to execute code (using the supplied examples) that performs the required functionality on supplied or generated data sets?\n",
     "\n",
-    "> **Analyze**: Are you able to pick the relevant method, library, or resolve specific stated questions?\n",
+    "> **Analyze**: Are you able to pick the relevant method or library to resolve specific stated questions?\n",
     "\n",
     "> **Evaluate**: Are you able to interpret the results and justify your interpretation based on the observed data?\n",
     "\n",
@@ -417,7 +417,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -482,8 +482,10 @@
     "for row in c.execute('SELECT * FROM students ORDER BY id'):\n",
     "        print row\n",
     "\n",
+    "# Save (commit) the changes.\n",
+    "conn.commit()\n",
     "# Close the connection.\n",
-    "c.close()"
+    "conn.close()"
    ]
   },
   {
@@ -516,8 +518,10 @@
     "for row in c.execute('SELECT * FROM students ORDER BY id'):\n",
     "        print row\n",
     "\n",
+    "# Save (commit) the changes.\n",
+    "conn.commit()\n",
     "# Close the connection.\n",
-    "c.close()"
+    "conn.close()"
    ]
   },
   {
@@ -540,14 +544,16 @@
     "import sqlite3\n",
     "\n",
     "# Read sqlite query results into a pandas DataFrame ordered by id in descedning order.\n",
-    "con = sqlite3.connect(\"example.db\")\n",
-    "df = pd.read_sql_query(\"SELECT * from students ORDER BY id desc\", con)\n",
+    "conn = sqlite3.connect(\"example.db\")\n",
+    "df = pd.read_sql_query(\"SELECT * from students ORDER BY id desc\", conn)\n",
     "\n",
     "# Verify that result of SQL query is stored in the dataframe.\n",
     "print(df.head())\n",
     "\n",
+    "# Save (commit) the changes.\n",
+    "conn.commit()\n",
     "# Close the connection.\n",
-    "con.close()"
+    "conn.close()"
    ]
   },
   {
@@ -870,7 +876,7 @@
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
-    "<b>Exercise 1 start: DataFrames.</b>\n",
+    "<b>Exercise 1 Start: DataFrames.</b>\n",
     "</div>\n",
     "\n",
     "### Instructions\n",
@@ -887,7 +893,7 @@
    },
    "outputs": [],
    "source": [
-    "Your code here."
+    "# Your code here."
    ]
   },
   {
@@ -1016,7 +1022,7 @@
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
-    "<b>Exercise 2 start: Data exploration.</b>\n",
+    "<b>Exercise 2 Start: Data exploration.</b>\n",
     "</div>\n",
     "\n",
     "### Instructions\n",
@@ -1071,7 +1077,7 @@
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
-    "<b>Exercise 3 start: Matplotlib.</b>\n",
+    "<b>Exercise 3 Start: Matplotlib.</b>\n",
     "</div>\n",
     "\n",
     "### Instructions\n",
@@ -1191,8 +1197,8 @@
    "outputs": [],
    "source": [
     "# Return the min and max date.\n",
-    "print ts.index.min()\n",
-    "print ts.index.max()"
+    "print(ts.index.min())\n",
+    "print(ts.index.max())"
    ]
   },
   {
@@ -1237,8 +1243,8 @@
    "source": [
     "# Create a new data frame, tsc, containing the subset of 2015 data and print the minimum and maximum values.\n",
     "tsc = ts.loc['2015-1-1':'2015-12-31']\n",
-    "print tsc.index.min()\n",
-    "print tsc.index.max()"
+    "print(tsc.index.min())\n",
+    "print(tsc.index.max())"
    ]
   },
   {
