--- a/module_1/M1_NB3_VisualCommunication.ipynb
+++ b/module_1/M1_NB3_VisualCommunication.ipynb
@@ -236,7 +236,8 @@
    "outputs": [],
    "source": [
     "# Plot the count of students per country.\n",
-    "country_counts = df1.groupby(['country'])['student_count'].count()\n",
+    "country_counts = df1.groupby(['country'])['student_count'].sum()\n",
+    "\n",
     "country_counts.plot(kind='bar')"
    ]
   },
@@ -256,7 +257,7 @@
    "outputs": [],
    "source": [
     "# Plot the count of students per industry.\n",
-    "industry_counts = df1.groupby(['industry'])['student_count'].count()\n",
+    "industry_counts = df1.groupby(['industry'])['student_count'].sum()\n",
     "industry_counts.plot(kind='bar')"
    ]
   },
@@ -266,7 +267,7 @@
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
-    "<b>Exercise 1 start: Plot student count.</b>\n",
+    "<b>Exercise 1 Start: Plot student count.</b>\n",
     "</div>\n",
     "\n",
     "### Instructions\n",
@@ -274,7 +275,7 @@
     "\n",
     "1. Create a data frame with the list of cities in your country that are present in this data set. Should the data set be too sparsely or densely populated for your country, you are welcome to select another. Use the variable name \"df3\" for your subset.\n",
     "\n",
-    "2. Create a bar plot for the cities in this country, indicating the number of students in each city.\n",
+    "2. Create a bar plot for the cities in this country, indicating the number of students in each city using the sum method.\n",
     "\n",
     "> **Hint**: \n",
     "\n",
@@ -341,11 +342,15 @@
     "## 1.3 Geocoding the data\n",
     "Next, geocode the cities in the student registrations list in order to display their locations on a map.\n",
     "\n",
-    "Executing the cell below is **optional**. This cell will run through a loop and geocode each of the city and country combinations provided as input. This process may take up to 5 minutes as the response time is influenced by the target server capacity.\n",
+    "> **Important**: \n",
+    ">\n",
+    "> Executing the cell below is **optional**. This cell will run through a loop and geocode each of the city and country combinations provided as input. This process may take up to 5 minutes as the response time is influenced by the target server capacity.\n",
     "\n",
     "On a course such as this one, where there is a large number of students, you may experience a delay in response. This opportunity will therefore be used to demonstrate how you can save intermediary results as an output file, which you can then load when resuming your analysis at a later stage, without having to redo all of the processing.\n",
     "\n",
-    "Should you choose not to execute the cell, you will have to retrieve the geocoded data set in the cell that follows."
+    "> **Note:**\n",
+    "> \n",
+    "> Should you choose not to execute the cell, you will have to retrieve a saved copy of the geocoded data set in the cell that follows."
    ]
   },
   {
@@ -357,21 +362,21 @@
    },
    "outputs": [],
    "source": [
-    "# Now we use Geocoder in a loop to gecode the cities and update our dataframe.\n",
+    "# Now we use Geocoder in a loop to geocode the cities and update our dataframe.\n",
     "# Wait until the In{*} indicator on the lefthand side changes to a number before proceeding.\n",
     "\n",
     "for i in range(len(df1)):\n",
     "    g = geocoder.google(df1.loc[i,'geocode_input'])\n",
-    "    df1.ix[i,'lat'] = g.lat\n",
-    "    df1.ix[i,'long'] = g.lng\n",
-    "print 'Geocoding complete!'"
+    "    df1.loc[i,'lat'],  df1.loc[i,'long'] = g.lat, g.lng\n",
+    "    \n",
+    "print('Geocoding complete!')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you opted to execute the cell above, wait for it to complete. The \"In[ ]\" will show \"In[*]\" while being executed, and will change to \"In[number]\" when complete. If this step has been completed successfully, you won’t have to load the data set in the following cell. Should you choose to execute the cell, no harm will be done. You will simply overwrite your geocoded data set with the supplied geocoded data set.\n",
+    "If you opted to execute the cell above, wait for it to complete. The \"In[ ]\" will show \"In[\\*]\" while being executed, and will change to \"In[number]\" when complete. If this step has been completed successfully, you will not have to load the data set in the following cell. Should you choose to execute the cell, no harm will be done. You will simply overwrite your geocoded data set with the supplied geocoded data set.\n",
     "\n",
     "If you opted to not execute the cell above, you will need to execute the cell below to retrieve the data set that has already been geocoded for you, in order to proceed."
    ]
@@ -460,18 +465,21 @@
     "map_osm = folium.Map(location=mapc,\n",
     "                    zoom_start=zoom)\n",
     "\n",
-    "# Plot each of the locations that we geocoded.\n",
-    "for j in range(len(df1)):\n",
-    "    folium.Marker([df1.ix[j,'lat'], df1.ix[j,'long']],\n",
-    "        icon=folium.Icon(color='green',icon='info-sign')\n",
-    "        ).add_to(map_osm)\n",
     "\n",
     "# Plot your server location.\n",
     "folium.CircleMarker(mylocation.latlng,\n",
     "              radius=500000,\n",
     "              popup='My Server Location',\n",
-    "              fill_color='#3186cc'\n",
+    "              fill_color='red'\n",
     "             ).add_to(map_osm)\n",
+    "\n",
+    "# Plot each of the locations that you geocoded.\n",
+    "for j in range(len(df1)):\n",
+    "    folium.Marker([df1.ix[j,'lat'], df1.ix[j,'long']],\n",
+    "        icon=folium.Icon(color='green',icon='info-sign')\n",
+    "        ).add_to(map_osm)\n",
+    "\n",
+    "\n",
     "\n",
     "# Show the map.\n",
     "map_osm"
@@ -486,7 +494,7 @@
    "outputs": [],
    "source": [
     "# Feel free to experiment here with mapping options.\n",
-    "# You can copy and paste the code from the cell above and change markers, zoom level \n",
+    "# You can copy and paste the code from the cell above and change markers, zoom level, \n",
     "# or add additional features demonstrated on the Folium site in this cell.\n",
     "\n",
     "\n"
@@ -513,7 +521,7 @@
    "source": [
     "<br>\n",
     "<div class=\"alert alert-info\">\n",
-    "<b>Exercise 2 start: Markdown.</b>\n",
+    "<b>Exercise 2 Start: Markdown.</b>\n",
     "</div>\n",
     "\n",
     "### Instructions\n",
@@ -559,7 +567,7 @@
    },
    "outputs": [],
    "source": [
-    "Your code answer here. (#3)"
+    "# Your code answer here. (#3)"
    ]
   },
   {
@@ -570,7 +578,7 @@
    },
    "outputs": [],
    "source": [
-    "Your code answer here. (#4)"
+    "# Your code answer here. (#4)"
    ]
   },
   {
@@ -581,7 +589,7 @@
    },
    "outputs": [],
    "source": [
-    "Your code answer here. (#5)"
+    "# Your code answer here. (#5)"
    ]
   },
   {
