M1NB1 slice update

--- a/module_1/M1_NB1_PythonIntro.ipynb
+++ b/module_1/M1_NB1_PythonIntro.ipynb
@@ -364,7 +364,7 @@
    },
    "outputs": [],
    "source": [
-    "# Slicing: get the first element to the second element of the string 'BobBobBob'. \n",
+    "# Slicing: get the last element of the string 'BobBobBob'. \n",
     "('Bob'*3)[0:-1]"
    ]
   },
