M5NB1 Reference update

--- a/module_5/M5_NB1_BandicootIntroduction.ipynb
+++ b/module_5/M5_NB1_BandicootIntroduction.ipynb
@@ -1250,7 +1250,9 @@
     "# 8. References\n",
     "Aharony, Nadav, Wei Pan, Cory Ip, Inas Khayal, Alex Pentland. 2011. “SocialfMRI: Investigating and shaping social mechanisms in the real world.” Pervasive and Mobile Computing 7:643-659.\n",
     "\n",
-    "Jahani, Eaman, Pal Roe Sundsoy, Johannes Bjelland, Asif Iqbal, Alex Pentland, and Yves-Alexandre de Montjoye. 2015. “Predicting Gender from Mobile Phone Metadata.” Paper presented at the Netmob Conference, Massachusetts Institute of Technology, Cambridge, April 8-10."
+    "Jahani, Eaman, Pal Roe Sundsoy, Johannes Bjelland, Asif Iqbal, Alex Pentland, and Yves-Alexandre de Montjoye. 2015. “Predicting Gender from Mobile Phone Metadata.” Paper presented at the Netmob Conference, Massachusetts Institute of Technology, Cambridge, April 8-10.\n",
+    "\n",
+    "de Montjoye, Yves-Alexandre, Luc Rocher, and Alex 'Sandy' Pentland. (2016). bandicoot: a Python Toolbox for Mobile Phone Metadata. Journal of Machine Learning Research, 17:1-5. Accessed October 30, 2016."
    ]
   },
   {
