--- a/module_2/M2_NB1_SourcesOfData.ipynb
+++ b/module_2/M2_NB1_SourcesOfData.ipynb
@@ -220,7 +220,7 @@
    },
    "outputs": [],
    "source": [
-    "# after running this cell you can close the help by clicking on close (`X`) button in the upper right corner\n",
+    "# After running this cell you can close the help by clicking on close (`X`) button in the upper right corner\n",
     "wb.download?"
    ]
   },
@@ -228,14 +228,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#  We have selected indicator, \"SP.POP.TOTL\", and are interested in the years from 2008 to 2016\n",
+    "#  The selected indicator is the world population, \"SP.POP.TOTL\", for the years from 2008 to 2015 \n",
     "wb_indicator = 'SP.POP.TOTL'\n",
     "start_year = 2008\n",
-    "end_year = 2016\n",
+    "end_year = 2015\n",
     "\n",
     "df4 = wb.download(indicator = wb_indicator,\n",
     "                  country = ['all'],\n",
@@ -406,7 +406,7 @@
     "   - What you think the results may indicate.\n",
     "\n",
     "> **Important**:\n",
-    "- Only the external data needs to be prepared. You do not need to prepare the student dataset again. Just use the student data that you prepared above. \n",
+    "- Only the external data needs to be prepared. You do not need to prepare the student dataset again. Just use the student data that you prepared above and join this to the new dataset you sourced. \n",
     "- Only plot the mean values for your selected indicator (**not** the standard deviation values).\n"
    ]
   },
@@ -517,7 +517,7 @@
     "\n",
     "> After executing the cells for the Wikipedia example in Section 1.2, think about the potential implications of using this \"public\" and, in many cases, \"untrusted\" data source when doing analysis or creating data products.\n",
     "\n",
-    "> **Please compile and submit for evaluation a list of *three pros** and **three cons.**\n",
+    "> **Please compile and submit for evaluation a list of *three pros* and *three cons*.**\n",
     "\n",
     ">> **Note**: Your submission can be a simple markdown list using the syntax provided below."
    ]
@@ -529,12 +529,14 @@
     "Add your answer in this markdown cell. The contents of this cell should be replaced with your answer.\n",
     "\n",
     "**Submit as a list:**\n",
-    "- Pro: Description 1\n",
-    "- Pro: Description 2\n",
-    "- Pro: Description 3\n",
-    "- Con: Description 1\n",
-    "- Con: Description 2\n",
-    "- Con: Description 3"
+    "- Pros: \n",
+    "    - Description 1\n",
+    "    - Description 2\n",
+    "    - Description 3\n",
+    "- Cons:\n",
+    "    - Description 1\n",
+    "    - Description 2\n",
+    "    - Description 3"
    ]
   },
   {
