--- a/module_2/M2_NB3_CollectYourOwnData.ipynb
+++ b/module_2/M2_NB3_CollectYourOwnData.ipynb
@@ -98,6 +98,9 @@
     "> Building applications is a separate topic, and you will begin with using another open source project from MIT to process your data in a format that can be utilized for analysis.\n",
     "\n",
     "[Bandicoot](http://bandicoot.mit.edu/) is an open-source Python toolbox, which analyzes mobile phone metadata. This section demonstrates how it can be used to collect your own data. Additional examples, as well as how Bandicoot is used to analyze mobile phone data, will be demonstrated in Module 5.\n",
+    "> **Important:**\n",
+    ">\n",
+    "> The demonstration below requires the use of an Android phone. ***If you do not have access to an Android phone***, a file, named \"metadata_sample.csv\", in the \"data\" directory under \"module_2\", has been provided that you can use for your analysis. Bandicoot is not available on Apple phones due to restrictions in the operating system.\n",
     "\n",
     "***If you have an Android phone***, you can export your own metadata by following these steps:\n",
     "1. Go to http://bandicoot.mit.edu/android and install the application on your phone;\n",
@@ -108,9 +111,7 @@
     "\n",
     "> You can upload files from the directory view in your Jupyter notebook. Ensure that you select the file and then click \"upload\" to start the upload process.\n",
     "\n",
-    "> ![Uploading files screenshot](Upload_01.png \"Screenshot of uploading files\")\n",
-    "\n",
-    "***If you do not have access to an Android phone***, a file, named \"metadata_sample.csv\", in the \"data\" directory under \"module_2\", has been provided that you can use for your analysis. Bandicoot is not available on Apple phones due to restrictions in the operating system."
+    "> ![Uploading files screenshot](Upload_01.png \"Screenshot of uploading files\")"
    ]
   },
   {
@@ -292,13 +293,17 @@
     "<div class=\"alert alert-info\">\n",
     "<b>Exercise 1 Start.</b>\n",
     "</div>\n",
-    "1. Using the exported visualization, identify the id of the fifth-ranked user by hovering over the Ego network shown, and take a screenshot. Embed the image as your solution to this part of the exercise.\n",
+    "1. Using the exported visualization, identify a user id with five interactions by hovering over the Ego network shown, and take a screenshot. Embed the image as your solution to this part of the exercise.\n",
     "> **Important**: Use the following template to embed the image. This allows the image to be retained in the shared notebook.\n",
     ">\n",
     "`from IPython.display import Image\n",
     "Image(filename=\"yourImageFilename.ext\")`\n",
     "2. What is the recorded number of interactions observed in Week 03/07 to 09/07? You can obtain this value by changing the view in visualization from \"by week\" to \"all time range\".\n",
-    "3. On average, approximately how many interactions are observed on a Thursday evening, rounded to the nearest integer? Show your calculation in a code."
+    "\n",
+    "3. Of the incoming interactions across the entire time range, what percentage of these were text? Show your calculation using values from the exported visualization.\n",
+    "\n",
+    "**Note:**\n",
+    "> Please use the supplied dataset to complete the exercise rather than your own data. "
    ]
   },
   {
