--- a/module_2/M2_NB1_SourcesOfData.ipynb
+++ b/module_2/M2_NB1_SourcesOfData.ipynb
@@ -198,7 +198,7 @@
    },
    "outputs": [],
    "source": [
-    "#df3.columns = df3.columns.droplevel(1)\n",
+    "df3.columns = df3.columns.droplevel(1)\n",
     "df3.rename(columns={'lat': \"lat_mean\", \n",
     "                    'long': \"long_mean\"}, inplace=True)\n",
     "df3.head()"
@@ -314,12 +314,10 @@
    "outputs": [],
    "source": [
     "# Combine the student and population datasets.\n",
-    "df3.columns = df3.columns.droplevel(1)\n",
     "df7 = pd.merge(df3, df6, on='country', how='left')\n",
     "\n",
     "# Rename the columns of our merged dataset and assign to a new variable.\n",
-    "df8 = df7.rename(index=str, columns={('SP.POP.TOTL'): \"PopulationTotal_Latest_WB\",\n",
-    "                                ('student_count', 'sum'): \"student_count\"})"
+    "df8 = df7.rename(index=str, columns={('SP.POP.TOTL'): \"PopulationTotal_Latest_WB\"})"
    ]
   },
   {
@@ -330,7 +328,7 @@
    },
    "outputs": [],
    "source": [
-    "df7.head()"
+    "df8.head()"
    ]
   },
   {
